# DICOM_data_software

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qdcm.sln
samples/: CT-MONO2-16-ankle (1).dcm  CT-MONO2-16-ankle.dcm  ct-2-test-artificial-edited-in-notepad.dcm
samples/Test WL/: G0C0T0.dcm  G0C0T270.dcm  G0C0T90.dcm  G0C180T0.dcm  G0C270T0.dcm  G0C90T0.dcm  G180C0T0.dcm  (+2 more)
source/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
tools/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
tools/interface/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  interface.sln  interface.vcxproj  interface.vcxproj.filters
tools/interface/include/: mainwindow.h  mainwindow_BACKUP_1965.h  mainwindow_BASE_1965.h  mainwindow_LOCAL_1965.h  mainwindow_REMOTE_1025.h
tools/interface/src/: DicomTreeModel.cpp  imageViewer.ui  mainwindow.cpp  mainwindow.ui
(+87 files in other folders)
